--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@
 
 /* Image for Parallax Section */
 .paral-marriage {
-  background-image: url("../img/sandj.jpg");
+  background-image: url("../img/VB-58.jpg");
   min-height: 600px;
 }
 .paralsec {
