--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
-.bg-marriage {
+.bg-marriage-dark {
   background-color: #997a8d;
 }
+
 /* Header Parallax Element Style*/
 .paral {
   min-height: 600px;
