--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,16 @@
-.bg-marriage-dark {
+body {
+  color: #f5f5f5;
+}
+.bg-marriage-balais {
+  background-color: #c4698f;
+}
+
+.bg-marriage-mount {
   background-color: #997a8d;
+}
+
+.bg-marriage-black {
+  background-color: #2d241e;
 }
 
 /* Header Parallax Element Style*/
@@ -7,7 +18,7 @@
   min-height: 600px;
   background-attachment: fixed;
   background-size: cover;
-  background-position: 50% 50%;
+  background-position: 0% 0%;
 }
 
 /* Paragrapgh for Parallax Section */
@@ -20,16 +31,16 @@
 
 /* Heading for Parallax Section */
 .paral h1 {
-  color: rgba(255, 255, 255, 0.8);
-  font-size: 60px;
+  color: rgb(255, 255, 255);
+  font-size: 100px;
   text-align: center;
-  padding-top: 60px;
+  padding-top: 250px;
   line-height: 100px;
 }
 
 /* Image for Parallax Section */
 .paral-marriage {
-  background-image: url("../img/VB-58.jpg");
+  background-image: url("../img/family2.jpeg");
   min-height: 600px;
 }
 .paralsec {
@@ -44,8 +55,6 @@
   background-image: url("img/venue/venue8.jpg");
 }
 
-/* Add more images for more sections */
-
 /* Remove Bottom Margin from Jumbotron */
 .jumbotron {
   margin-bottom: 0;
@@ -56,10 +65,9 @@
   padding: 2.5rem 0;
   text-align: center;
   color: white;
-  background-color: #997a8d;
+  background-color: #c4698f;
   border-top: 0.05rem solid #e5e5e5;
 }
 
 .wn-footer a {
-  color: yellow;
 }
