fixed a few things

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@
   min-height: 500px;
 }
 .lieu-tab {
-  background-image: url("../img/bg/white-bg.png");
+  background-image: url("../img/venue/venue8.jpg");
   min-height: 400px;
 }
 .liste-cadeaux-tab {
