--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,20 @@
 .jumbotron {
   margin-bottom: 0;
 }
+.navbar-nav .nav-item .nav-link {
+  color: black;
+}
 
 /* Footer */
 .wn-footer {
   padding: 2.5rem 0;
   text-align: center;
-  color: white;
-  background-color: #c4698f;
+  background-color: #fadadd;
   border-top: 0.05rem solid #e5e5e5;
 }
 
 .wn-footer a {
-  color: white;
+  color: black;
 }
 
 .wn-footer a:hover {
@@ -25,7 +27,7 @@
 }
 
 .bg-marriage-balais {
-  background-color: #c4698f;
+  background-color: #fadadd;
 }
 .main-h1-size {
   /* color: #2d241e; */
@@ -42,7 +44,6 @@
 .acceuil-tab {
   background-image: url("../img/bg/pink-bg.png");
   min-height: 400px;
-  /* background-color: black; */
 }
 .marriage-tab {
   background-image: url("../img/bg/white-bg.png");
@@ -51,7 +52,6 @@
 .program-tab {
   background-image: url("../img/bg/pink-bg.png");
   min-height: 400px;
-  /* background-color: black; */
 }
 .histoire-tab {
   background-image: url("../img/bg/pink-bg.png");
@@ -65,7 +65,6 @@
 .lieu-tab {
   background-image: url("../img/venue/venue8.jpg");
   min-height: 400px;
-  /* color: white; */
   font-size: 40px;
   font: 40px bold;
 }
@@ -242,7 +241,6 @@ body {
   .lieu-tab {
     background-image: url("../img/venue/venue8.jpg");
     min-height: 200px;
-    /* color: white; */
     font-size: 20px;
     font: 20px bold;
   }
