--- a/css/style.css
+++ b/css/style.css
@@ -63,10 +63,8 @@
   min-height: 500px;
 }
 .lieu-tab {
-  background-image: url("../img/venue/venue8.jpg");
+  background-image: url("../img/bg/white-bg.png");
   min-height: 400px;
-  font-size: 40px;
-  font: 40px bold;
 }
 .liste-cadeaux-tab {
   background-image: url("../img/bg/pink-bg.png");
@@ -239,10 +237,10 @@ body {
   }
 
   .lieu-tab {
-    background-image: url("../img/venue/venue8.jpg");
+    background-image: url("../img/bg/white-bg.png");
     min-height: 200px;
-    font-size: 20px;
-    font: 20px bold;
+    /* font-size: 20px;
+    font: 20px bold; */
   }
   .main-h1-size {
     font-size: 60px;
