--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
 .main-h1-size {
   /* color: #2d241e; */
   font-size: 100px;
-  font-family: "Neue Helvetica";
+  font-family: "Century Gothic", "Neue Helvetica", CenturyGothic, AppleGothic, sans-serif;
 }
 .welcome-tab {
   background-image: url("../img/people/thumbs.jpeg");
@@ -44,6 +44,7 @@
 .acceuil-tab {
   background-image: url("../img/bg/pink-bg.png");
   min-height: 400px;
+  font-family: "Century Gothic", "Neue Helvetica", CenturyGothic, AppleGothic, sans-serif;
 }
 .marriage-tab {
   background-image: url("../img/bg/white-bg.png");
